# Lecture-Day-08-09-10

./: .env.example  .gitignore  DRAWF_REPORT.md  pyproject.toml  rag_answer.py  requirements.txt  shell.nix
.antigravity/: day09_summary.md
.claude/: settings.local.json
.github/: copilot-instructions.md
artifacts/traces/: run_20260414_151016.json  run_20260414_222708_732207.json  run_20260414_222713_452235.json  run_20260414_222716_082217.json  run_20260414_222717_005539.json  run_20260414_222718_307357.json  run_20260414_222719_706894.json  run_20260414_222721_957802.json  run_20260414_222723_103230.json  run_20260414_222724_402068.json  run_20260414_222725_351357.json
chroma_db/: chroma.sqlite3
day08/: PLAN.md  RAG_quickstart_plan.md  ROLE_INDIVIDUALS.md  code.txt  individual_task.md  team-guide.html
day08/lab/: .env  .env.example  .gitignore  CLAUDE.md  README.md  api_server.py  app.py  benchmark_new_testset.py  benchmark_optimize.py  chat_box.py  config.py  eval.py  eval_manual.py  grade.py  grade_grading_run.py  grade_rubric.py  grading_run.py  index.py  llm_eval.py  manual_eval.py  plan.md  pyproject.toml  query_trans.py  quick_test.py  rag_answer.py  requirements.txt  retrieval_workflow.md  run_ab_comparison.py  run_eval.py  run_grading.py  run_sprints.py  run_telemetry.py  run_test_questions_with_trace.py  tmp.py
day09/: tickets_db.json
day09/chroma_db/: chroma.sqlite3
day09/lab/: .env.example  (+18 more)
day10/: PHAN_CHIA_CONG_VIEC_NHOM.md
frontend/: package.json
repo/: eval.py  index.py  python run_grading.py  rag_answer.py
src/: rag_answer.py
(+822 files in other folders)
