[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Lab8"
version = "0.1.0"
description = "Nothing yet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "chromadb>=1.5.7",
 "llama-index-core>=0.14.20",
 "llama-index-readers-file>=0.6.0",
 "llama-index-embeddings-openai>=0.6.0",
 "llama-index-llms-openai>=0.7.5",
 "PyStemmer>=2.2.0.3",
 "llama-index-retrievers-bm25>=0.7.1",
 "dotenv>=0.9.9",
 "llama-index-postprocessor-sbert-rerank>=0.5.0",
 "sentence-transformers>=5.4.0",
 "ragas>=0.4.3"
]

[tool.setuptools]
packages = ["day08", "day09", "day10"]

[project.optional-dependencies]
dev = [
	"pytest",

	# pip install . install the core application
	# pip install ".[dev]" installs the app PLUS all these testing and linting tools
]


[tool.pytest.ini_options]
# Tell pytest to add the 'src' directory to the PYTHONPATH
pythonpath = [
  # "src"
]

[tool.basedpyright]
# Tell basedpyright to add 'src' to its list of
# paths to search for imports. This directly fixes the
# "reportMissingImports" error.
extraPaths = [
]
# include = ["src"]
exclude = ["__pycache__", ".direnv", ".mypy_cache", ".git", ".venv"]
